data/src/objects/Distributor_Product__c.object
<CustomObject>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Distributor Products</relationshipLabel>
        <relationshipName>Distributor_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Products__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Distributors</relationshipLabel>
        <relationshipName>Distributor_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Distributor Product</label>
    <nameField>
        <label>Distributor Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributor Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>